Fix item selection on small mobile breaking and broken link

--- a/src/ItemSelection/ObjectItemSelection.css
+++ b/src/ItemSelection/ObjectItemSelection.css
@@ -20,7 +20,7 @@
 }
 
 .friends-items {
-  padding: 15px;
+  /* padding: 15px; */
   width: 100%;
   max-width: 357px;
 }
